@@ -6,6 +6,7 @@
 #    yt/server/master/cell_master/serialize.cpp - if the version differs, then the update should be done with master snapshots (+ --set-read-only).
 #    yt/server/node/tablet_node/serialize.cpp - if the version differs, then the update should be done with tablet cell recreation.
 
+* shakurov: YT-13015. Update masters via snapshot.
 * gritukan: Master config changed. Update masters via snapshot.
 * gritukan: Tasks information added to operation archive. Update operation archive to version 35.
 * shakurov: BeginUpload behavior has changed by commit c367763748. Update masters via snapshot.
